--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script type="text/javascript" src="/public/bundle.js"></script>
   </body>
 </html>
