changes good so far, room is broken

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Amatica+SC|Cabin+Sketch" rel="stylesheet">
+  
+    <link href="./src/styles/app.scss" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
